# amplifier-bundle-design-loop

./: .gitignore  README.md  bundle.md  pyproject.toml  run.sh
agents/: design-critic.md  design-judge.md  design-maker.md  design-planner.md
app/: __init__.py  annotate.py  audit.py  dry_runner.py  landing.py  main.py  protocols.py  pyproject.toml  real_runner.py  results.py  ws_handler.py
context/: signature-vocabulary.md
docs/: DEV_SETUP.md  HANDOFF.md  HARNESS_DESIGN.md  PRIMITIVE.md  README.md  design-loop-harness.dot  design-loop-metaharness.dot  design-loop-workflow.dot  persona-and-user-stories.md  senior-design-lead-workflow.md
docs/plans/: 2026-06-29-design-loop-implementation.md
fixtures/: excellent.html  slop.html
modules/tool-design-controller/: pyproject.toml
modules/tool-design-controller/amplifier_module_tool_design_controller/: __init__.py
modules/tool-design-controller/tests/: test_evaluate.py  test_gate.py  test_mount.py
modules/tool-design-ledger/: pyproject.toml
modules/tool-design-ledger/amplifier_module_tool_design_ledger/: __init__.py
modules/tool-design-ledger/tests/: test_design_ledger.py
modules/tool-design-lints/: pyproject.toml
modules/tool-design-lints/amplifier_module_tool_design_lints/: __init__.py  lints.py
modules/tool-design-lints/tests/: test_design_lints_tool.py  test_mount.py
modules/tool-render/: pyproject.toml
modules/tool-render-report/: pyproject.toml
modules/tool-render-report/amplifier_module_tool_render_report/: __init__.py  template.py  verdict.py
modules/tool-render-report/fixtures/demo/: slop.html  upgraded.html
modules/tool-render-report/scripts/: render_demo.py
modules/tool-render-report/tests/: test_mount.py  test_ship_verdict.py  test_template.py  test_verdict.py
modules/tool-render/amplifier_module_tool_render/: __init__.py  render.py
modules/tool-render/tests/: test_mount.py  test_render.py  test_render_tool.py
modules/tool-target-state/: pyproject.toml
modules/tool-target-state/amplifier_module_tool_target_state/: __init__.py
modules/tool-target-state/tests/: test_mount.py  test_orchestration.py
recipes/: design-converge.yaml  design-pass.yaml  dlx.py  harness-evolution.yaml  hev.py
tests/: test_agent_structure.py  test_bundle_structure.py  test_dlx.py  test_harness_agents_structure.py  test_sanity.py
tests/integration/: conftest.py  test_excellent_page.py  test_golden_slop.py
