[project]
name = "amplifier-module-tool-design-ledger"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-design-ledger = "amplifier_module_tool_design_ledger:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_design_ledger"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
