[project]
name = "amplifier-module-tool-design-lints"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
]

[project.entry-points."amplifier.modules"]
tool-design-lints = "amplifier_module_tool_design_lints:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_design_lints"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
