[project]
name = "amplifier-module-tool-render-report"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."amplifier.modules"]
tool-render-report = "amplifier_module_tool_render_report:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_render_report"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
