[project]
name = "amplifier-module-tool-render"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
]

[project.entry-points."amplifier.modules"]
tool-render = "amplifier_module_tool_render:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_render"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
